# celestine

./: .eslintrc.cjs  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: ARCHITECTURE.md
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/native/: AudioTranscriber.m  HandwritingRecognizer.m
src-tauri/src/: google_auth.rs  lib.rs  main.rs
src/components/: AudioRecorderPanel.tsx  CommandPalette.tsx  ConfirmationDialog.tsx  DocumentEditor.tsx  EditorHeader.tsx  EditorSettingsModal.tsx  HomeDesk.tsx  InfiniteCanvas.tsx  LibraryViews.tsx  LiquidOrb.tsx  NotesList.tsx  ProjectDesk.tsx  QuickCapturePanel.tsx  RichTextSlashMenu.tsx  SettingsPanel.tsx  Sidebar.tsx  TextCard.tsx  TextInputDialog.tsx  ToolDock.tsx
src/components/ui/: ColorPalette.tsx
src/data/: defaultWorkspace.ts
src/lib/: googleAuth.ts  markdown.ts  shapeRecognition.ts  storage.ts  strokeSmoothing.ts  tiptapTextStyle.ts  transcriptProcessor.ts
